--- a/themes/twitter/templates/twitter/base.html
+++ b/themes/twitter/templates/twitter/base.html
@@ -2,23 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>FotoChest</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}twitter/assets/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
+    <link href="{{ STATIC_URL }}twitter/css/bootstrap.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}twitter/css/custom.css" rel="stylesheet">
+    <style>
       body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="{{ STATIC_URL }}twitter/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}twitter/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -26,69 +23,57 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+    {% block extra_head %}{% endblock extra_head %}
   </head>
 
-  <body>
+  <body {% block extra_body %}{% endblock extra_body %}>
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container-fluid">
+        <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">FotoChest</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="active"><a href="{% url homepage %}">Home</a></li>
+              <li><a href="#">Albums</a></li>
+              <li><a href="#">Map</a></li>
             </ul>
-            <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
-    <div class="container-fluid">
-      <div class="row-fluid">
-        
-        <div class="span11">
-            {% block main_content %}{% endblock main_content %}
-            <div class="clearfix"></div>
-          
-        </div><!--/span-->
-      </div><!--/row-->
-
-      <hr>
-
-      <footer>
-        <p>&copy; Company 2012</p>
-      </footer>
-
-    </div><!--/.fluid-container-->
+    <div class="container">
+		<div class="row">
+			{% block main_content %}{% endblock main_content %}
+		</div>
+    </div> <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ STATIC_URL }}twitter/static/assets/js/jquery.js"></script>
-    <script src="{{ STATIC_URL }}twitter/static/assets/js/bootstrap-transition.js"></script>
-    <script src="{{ STATIC_URL }}twitter/static/assets/js/bootstrap-alert.js"></script>
-    <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
-    <script src="../assets/js/bootstrap-scrollspy.js"></script>
-    <script src="../assets/js/bootstrap-tab.js"></script>
-    <script src="../assets/js/bootstrap-tooltip.js"></script>
-    <script src="../assets/js/bootstrap-popover.js"></script>
-    <script src="../assets/js/bootstrap-button.js"></script>
-    <script src="../assets/js/bootstrap-collapse.js"></script>
-    <script src="{{ STATIC_URL }}twitter/static/assets/js/bootstrap-carousel.js"></script>
-    <script src="../assets/js/bootstrap-typeahead.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/jquery.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-transition.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-alert.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-modal.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-dropdown.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-scrollspy.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-tab.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-tooltip.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-popover.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-button.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-collapse.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-carousel.js"></script>
+    <script src="{{ STATIC_URL }}twitter/js/bootstrap-typeahead.js"></script>
 
   </body>
 </html>
