--- a/themes/twitter/templates/twitter/map.html
+++ b/themes/twitter/templates/twitter/map.html
@@ -8,13 +8,14 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -38,12 +39,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">FotoChest</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#about">Albums</a></li>
+              <li><a href="#contact">Map</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -51,10 +52,72 @@
     </div>
 
     <div class="container">
-
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
+		<div class="row">
+			<div class="span12">
+				<ul class="thumbnails">
+					<li class="span3">
+					<a href="#" class="thumbnail">
+						<img src="http://placehold.it/260x180" alt="">
+					</a>
+					<h4>Thumbnail label</h4>
+					</li>
+					<li class="span3">
+					<a href="#" class="thumbnail">
+						<img src="http://placehold.it/260x180" alt="">
+					</a>
+					<h4>Thumbnail label</h4>
+					</li>
+					<li class="span3">
+					<a href="#" class="thumbnail">
+						<img src="http://placehold.it/260x180" alt="">
+					</a>
+					<h4>Thumbnail label</h4>
+					</li>
+					<li class="span3">
+					<a href="#" class="thumbnail">
+						<img src="http://placehold.it/260x180" alt="">
+					</a>
+					<h4>Thumbnail label</h4>
+					</li>
+					<li class="span3">
+					<a href="#" class="thumbnail">
+						<img src="http://placehold.it/260x180" alt="">
+					</a>
+					<h4>Thumbnail label</h4>
+					</li>
+					<li class="span3">
+					<a href="#" class="thumbnail">
+						<img src="http://placehold.it/260x180" alt="">
+					</a>
+					<h4>Thumbnail label</h4>
+					</li>
+					<li class="span3">
+					<a href="#" class="thumbnail">
+						<img src="http://placehold.it/260x180" alt="">
+					</a>
+					<h4>Thumbnail label</h4>
+					</li>
+					<li class="span3">
+					<a href="#" class="thumbnail">
+						<img src="http://placehold.it/260x180" alt="">
+					</a>
+					<h4>Thumbnail label</h4>
+					</li>
+				</ul>
+				<div class="pagination">
+				<ul>
+				<li><a href="#">Prev</a></li>
+				<li class="active">
+				<a href="#">1</a>
+				</li>
+				<li><a href="#">2</a></li>
+				<li><a href="#">3</a></li>
+				<li><a href="#">4</a></li>
+				<li><a href="#">Next</a></li>
+				</ul>
+				</div>
+			</div>
+		</div>
     </div> <!-- /container -->
 
     <!-- Le javascript
