--- a/themes/twitter/static/twitter/css/custom.css
+++ b/themes/twitter/static/twitter/css/custom.css
@@ -6,3 +6,16 @@
     height: 200px;
     margin-top: 12px;
 }
+
+#map
+{
+    /*min-height: 850px;*/
+    height: 100%;
+    width: 100%;
+    margin-top: -20px;
+}
+
+.clear-photo
+{
+    clear: both;
+}
