--- a/themes/twitter/templates/twitter/albums.html
+++ b/themes/twitter/templates/twitter/albums.html
@@ -1,78 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% extends "twitter/base.html" %}
+{% block nav %}
+{% include "twitter/nav.html" with current=2 %}
+{% endblock nav %}
+{% block main_content %}
 
-    <!-- Le styles -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+<div class="span12">
+<div class="page-header">
+    <h2>Albums</h2>
+</div>
+<ul class="thumbnails">
+{% for album in albums.object_list %}
+    <li class="span3">
+        <a href="{{ album.get_absolute_url }}" class="thumbnail">
+            {% if album.album_cover %}
+                    {% load thumbnail %}
+                    {% thumbnail album.album_cover "300x220" as im %}
+                    <img src="{{ im.url }}">
+                    {% endthumbnail %}
+                    
+                {% else %}
+                    {% if album.get_album_cover %}
+                        {% load thumbnail %}
+                {% thumbnail album.get_album_cover.image "300x220" as im %}
+            <img src="{{ im.url }}">
+                {% endthumbnail %}
+                    {% else %}
+                    <img src="http://dummyimage.com/260x180">
+                    {% endif %}
+            {% endif %}
+        </a>
+        <h4>{{ album.title }}</h4>
+    </li>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+{% endfor %}
+</ul>
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-  </head>
 
-  <body>
+<div class="pagination">
+<ul>
+    {% if albums.has_previous %}
+    <li><a href="?page={{ albums.previous_page_number }}">Prev</a></li>
+    {% endif %}
+    {% if albums.number %}
+    <li class="active">
+        <a href="?page={{ albums.number }}">{{ albums.number }}</a>
+    </li>
+    {% endif %}
+    {% if albums.has_next %}
+    <li><a href="?page={{ albums.next_page_number }}">Next</a></li>
+    {% endif %}
+</ul>
+</div>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Project name</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/bootstrap-transition.js"></script>
-    <script src="../assets/js/bootstrap-alert.js"></script>
-    <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
-    <script src="../assets/js/bootstrap-scrollspy.js"></script>
-    <script src="../assets/js/bootstrap-tab.js"></script>
-    <script src="../assets/js/bootstrap-tooltip.js"></script>
-    <script src="../assets/js/bootstrap-popover.js"></script>
-    <script src="../assets/js/bootstrap-button.js"></script>
-    <script src="../assets/js/bootstrap-collapse.js"></script>
-    <script src="../assets/js/bootstrap-carousel.js"></script>
-    <script src="../assets/js/bootstrap-typeahead.js"></script>
-
-  </body>
-</html>
+</div>
+{% endblock %}
