--- a/themes/twitter/templates/twitter/base.html
+++ b/themes/twitter/templates/twitter/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"{% block extra_html %}{% endblock extra_html %}>
   <head>
     <meta charset="utf-8">
     <title>FotoChest</title>
@@ -32,25 +32,7 @@
 
   <body {% block extra_body %}{% endblock extra_body %}>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">FotoChest</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="{% url homepage %}">Home</a></li>
-              <li><a href="#">Albums</a></li>
-              <li><a href="#">Map</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    {% block nav %}{% endblock nav %}
 
     <div class="container">
 		<div class="row">
