--- a/themes/twitter/templates/twitter/index.html
+++ b/themes/twitter/templates/twitter/index.html
@@ -1,5 +1,7 @@
 {% extends "twitter/base.html" %}
-
+{% block nav %}
+{% include "twitter/nav.html" with current=1 %}
+{% endblock nav %}
 {% block main_content %}
 
 <div class="span12">
