--- a/themes/twitter/templates/twitter/map.html
+++ b/themes/twitter/templates/twitter/map.html
@@ -1,141 +1,123 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% extends "twitter/base.html" %}
+{% block extra_html %}style="height: 100%"{% endblock %}
+{% block title %}Map{% endblock %}
 
-    <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+{% block nav %}
+{% include "twitter/nav.html" with current=3 %}
+{% endblock nav %}
+{% block extra_head %}
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script>
+  function initialize() {
+    var blackStyles = [
+{
+featureType: 'all',
+rules: [
+{visibility: 'off'}
+]
+},
+{
+featureType: 'water',
+rules: [
+{visibility: 'on'},
+{lightness: -100 }
+]
+}
+];
+    var blackMapType = new google.maps.StyledMapType(blackStyles,
+    {name: "Black Map"});
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  
+  
+    var latlng = new google.maps.LatLng(-34.397, 150.644);
+    var myOptions = {
+      //zoom: 2,
+      //center: latlng,
+      
+      mapTypeId: google.maps.MapTypeId.ROADMAP,
+       styles: blackStyles,    
+    };
+    var map = new google.maps.Map(document.getElementById("map"),
+        myOptions);
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-  </head>
+      var bounds = new google.maps.LatLngBounds();
 
-  <body>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">FotoChest</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Albums</a></li>
-              <li><a href="#contact">Map</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+      {% for location in locations %}
+      {% if location.photo_set.all %}
+      
+      var latlng{{ location.id }} = new google.maps.LatLng({{ location.latitude }}, {{ location.longitude }});
+      var marker{{ location.id }} = new google.maps.Marker({
+         position: latlng{{ location.id }},
+         map: map,
+         title: ""
+      });
+
+      var content{{ location.id }} = '<div id="content">'+
+          
+          
+          '<p><a style="color:#2d2d2d;" href="{% if current_user %}{% url photo_manager.views.location location_slug=location.slug username=current_user.username %}{% else %}{% url photo_manager.views.location location_slug=location.slug %}{% endif %}">{{ location }} ({{ location.get_photo_count }})</a></p>' +
+          
+          '</div>';
+      var infowindow{{ location.id }} = new google.maps.InfoWindow({
+          content: content{{ location.id }}
+      });
+      google.maps.event.addListener(marker{{ location.id }}, 'click', function() {
+         infowindow{{ location.id }}.open(map, marker{{ location.id }});
+      });
+
+      bounds.extend(latlng{{ location.id }})
+      {% endif %}
+      {% endfor %}
+
+      map.fitBounds(bounds);    
+      map.mapTypes.set('black_map', blackMapType);
+      map.setMapTypeId('black_map');
+
+  }
+</script>
+
+{% endblock %}
+{% block header %}
+    {% if user_page == '1' %}
+        {{ block.super }}
+    {% else %}
+        
+    {% endif %}
+{% endblock %}
+{% block extra_nav %}
+    <li><a href="#" class="osx">Add Location</a></li>
+{% endblock %}
+
+{% block extra_body %}onLoad="initialize()" style="height:100%"{% endblock %}
+{% block main_class %}map_page{% endblock %}
+{% block main_content %}
+<style>
+.container,
+.row
+{
+   width: 100%;
+   height: 100%; 
+   margin-left: 0;
+}
+</style>
+<div id="map">
+        
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-		<div class="row">
-			<div class="span12">
-				<ul class="thumbnails">
-					<li class="span3">
-					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/260x180" alt="">
-					</a>
-					<h4>Thumbnail label</h4>
-					</li>
-					<li class="span3">
-					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/260x180" alt="">
-					</a>
-					<h4>Thumbnail label</h4>
-					</li>
-					<li class="span3">
-					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/260x180" alt="">
-					</a>
-					<h4>Thumbnail label</h4>
-					</li>
-					<li class="span3">
-					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/260x180" alt="">
-					</a>
-					<h4>Thumbnail label</h4>
-					</li>
-					<li class="span3">
-					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/260x180" alt="">
-					</a>
-					<h4>Thumbnail label</h4>
-					</li>
-					<li class="span3">
-					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/260x180" alt="">
-					</a>
-					<h4>Thumbnail label</h4>
-					</li>
-					<li class="span3">
-					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/260x180" alt="">
-					</a>
-					<h4>Thumbnail label</h4>
-					</li>
-					<li class="span3">
-					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/260x180" alt="">
-					</a>
-					<h4>Thumbnail label</h4>
-					</li>
-				</ul>
-				<div class="pagination">
-				<ul>
-				<li><a href="#">Prev</a></li>
-				<li class="active">
-				<a href="#">1</a>
-				</li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
-				<li><a href="#">4</a></li>
-				<li><a href="#">Next</a></li>
-				</ul>
-				</div>
+{% if user.is_authenticated %}
+            <!-- modal content -->
+		<div id="osx-modal-content">
+			<div id="osx-modal-title">FotoChest - Add Photo Location</div>
+			<div class="close"><a href="#" class="simplemodal-close">x</a></div>
+			<div id="osx-modal-data">
+				<form method="POST" action=".">{% csrf_token %}
+                                {{ location.non_field_errors }}
+                                    {{ location_form.as_p }}
+                                <input type="submit" value="Add Location" class="button">
+                                </form>
+				
 			</div>
 		</div>
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../assets/js/jquery.js"></script>
-    <script src="../assets/js/bootstrap-transition.js"></script>
-    <script src="../assets/js/bootstrap-alert.js"></script>
-    <script src="../assets/js/bootstrap-modal.js"></script>
-    <script src="../assets/js/bootstrap-dropdown.js"></script>
-    <script src="../assets/js/bootstrap-scrollspy.js"></script>
-    <script src="../assets/js/bootstrap-tab.js"></script>
-    <script src="../assets/js/bootstrap-tooltip.js"></script>
-    <script src="../assets/js/bootstrap-popover.js"></script>
-    <script src="../assets/js/bootstrap-button.js"></script>
-    <script src="../assets/js/bootstrap-collapse.js"></script>
-    <script src="../assets/js/bootstrap-carousel.js"></script>
-    <script src="../assets/js/bootstrap-typeahead.js"></script>
-
-  </body>
-</html>
+                
+            {% endif %}
+{% endblock %}
