--- a/themes/twitter/templates/twitter/photo.html
+++ b/themes/twitter/templates/twitter/photo.html
@@ -1,4 +1,7 @@
 {% extends "twitter/base.html" %}
+{% block nav %}
+{% include "twitter/nav.html" with current=2 %}
+{% endblock nav %}
 {% block extra_head %}
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script>
