--- a/apps/administrator/templates/administrator/add_photos.html
+++ b/apps/administrator/templates/administrator/add_photos.html
@@ -1,5 +1,5 @@
 {% extends "administrator/base.html" %}
-{% block extra_head %}
+{% block extra_foot %}
     <link href="{{ STATIC_URL }}js/uploadify/uploadify.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="{{ STATIC_URL }}js/uploadify/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/uploadify/swfobject.js"></script>
@@ -8,7 +8,7 @@
     $(document).ready(function() {
       $('#file_upload').uploadify({
         'uploader'  : '{{ STATIC_URL }}js/uploadify/uploadify.swf',
-        'script'    : '',
+        'script'    : '{% url file_uploader album_slug=album_slug location_slug=location_slug %}',
         'cancelImg' : '{{ STATIC_URL }}js/uploadify/cancel.png',
         'folder'    : '{{ upload_dir }}',
         'auto'      : true,
@@ -18,7 +18,7 @@
     });
     </script>
 
-  {% endblock %}
+  {% endblock extra_foot %}
   
   {% block navigation %}
   
