--- a/apps/administrator/templates/administrator/locations.html
+++ b/apps/administrator/templates/administrator/locations.html
@@ -94,7 +94,7 @@ rules: [
 <a href="#" class="btn btn-primary full">Add Location</a>
 <div class="well">
     <h4>Locations</h4>
-    <ul>
+    <ul class="unstyled">
     {% for location in locations %}
         <li>{{ location }}</li>
     {% endfor %}
