--- a/apps/administrator/static/administrator/css/added.css
+++ b/apps/administrator/static/administrator/css/added.css
@@ -4,8 +4,6 @@ a.brand img
     margin-bottom: 3px;
 }
 
-
-
 .sidebar
 {
     margin-top: 73px
@@ -20,7 +18,8 @@ a.brand img
 
 .btn.full
 {
-    width: 100%;
+    width: 92%;
+    margin-bottom: 10px;
 }
 
 li.thumb
