--- a/themes/twitter/static/twitter/css/custom.css
+++ b/themes/twitter/static/twitter/css/custom.css
@@ -19,3 +19,20 @@
 {
     clear: both;
 }
+
+// Comments
+.comments .well.odd
+
+{
+    background: #EEEEEE;
+}
+
+.comments .well .author
+{
+    margin-right: 6px;
+}
+
+.comments .well .comment
+{
+    margin-top: 10px;
+}
