--- a/apps/administrator/templates/administrator/base.html
+++ b/apps/administrator/templates/administrator/base.html
@@ -39,7 +39,7 @@
             <div class="modal-body">
               <h4>Select Album and Location</h4>
               <p>Select the album and location that you want to associate you uploaded photos with.</p>
-              <form method="GET" action="{% url photo_manager.views.choose %}">
+              <form method="GET" action="{% url administrator.views.choose %}">
               <label>Album Name:</label>
                               <select name="album">
                                   {% for album in form_albums %}
@@ -65,6 +65,7 @@
               <input type="submit" value="Proceed to Upload" class="btn btn-primary">
               
             </div>
+            </form>
           </div>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
