--- a/themes/twitter/templates/twitter/photo.html
+++ b/themes/twitter/templates/twitter/photo.html
@@ -81,7 +81,7 @@ rules: [
 {% load comments %}
 
 			<div class="span8">
-			<div class="btn-group">
+			<div class="btn-group photo-nav">
 			    {% if photo.get_previous %}
 				<a href="{{ photo.get_previous }}" class="btn"><i class="icon-arrow-left"></i> Previous</a>
 				{% endif %}
@@ -137,41 +137,33 @@ rules: [
 					</ul>
 					</div>
 				</div>
-				<div class="span8 comments">
-					<h4>Comments</h4>
-					{% render_comment_list for photo %}
-					<div class="well">
-					    <span class="author">Derek Stegelman</span>
+				<div class="span12 comments">
+					<h3>Comments</h3>
+					{% get_comment_list for photo as comment_list %}
+					{% for comment in comment_list %}
+					<div class="well {% if forloop.counter|divisibleby:2 %}odd{% endif %}">
+					    <span class="author">{{ comment.user_name }}</span>
+					    {% if comment.user %}
+					    <span class="label label-info">Photographer</span>
+					    {% endif %}
 					    <p class="comment">
-					    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-					    
-					    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+					        {{ comment.comment }}
 					    </p>
 					</div>
-					<div class="well odd">
-					    <span class="author">Derek Stegelman</span><span class="label label-info">Photographer</span>
-					    <p class="comment">
-					    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-					    
-					    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-					    </p>
-					</div>
-					<div class="well">
-					    <span class="author">Derek Stegelman</span>
-					    <p class="comment">
-					    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-					    
-					    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-					    </p>
-					</div>
+					{% endfor %}
+					
 				
 			</div>
-			<div class="span8">
+			<div class="span12">
 			
 			{% get_comment_form for photo as form %}
 			  <form class="well" action="{% comment_form_target %}" method="post">
 			    {% csrf_token %}
+			    {{ form.content_type }}
+			    {{ form.object_pk }}
 			    
+			    {{ form.timestamp }}
+			    {{ form.security_hash }}
 			    <label>Name:</label>
 			    {{ form.name }}
 			    <label>Email:</label>
@@ -179,8 +171,8 @@ rules: [
 			    <label>URL:</label>
 			    {{ form.url }}
 			    <label>Comment</label>
-			    <textarea name="comment" class="span7"></textarea>
-			    
+			    <textarea name="comment" class="span11"></textarea>
+			    <input type="hidden" value="{{ photo.get_absolute_url }}" name="next">
 			    <div class="form-actions">
 			        <input type="submit" name="submit" value="Post" class="btn btn-primary">
 			        <input type="submit" name="preview" class="btn"	value="Preview">			  </form>
