--- a/themes/twitter/templates/twitter/base.html
+++ b/themes/twitter/templates/twitter/base.html
@@ -2,7 +2,7 @@
 <html lang="en"{% block extra_html %}{% endblock extra_html %}>
   <head>
     <meta charset="utf-8">
-    <title>FotoChest</title>
+    <title>{{ app_name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
