--- a/apps/administrator/templates/administrator/dashboard.html
+++ b/apps/administrator/templates/administrator/dashboard.html
@@ -12,26 +12,12 @@
     {% thumbnail photo.image "240x161" crop="center" as im %}
         <img src="{{ im.url }}">
                 
-        <a class="btn edit-photo"><i class="icon-pencil"></i> Edit</a>
+        <a class="btn edit-photo" href="#"><i class="icon-pencil"></i> Edit</a>
     {% endthumbnail %}
     </a>
     <div class="caption">
-        <div class="controls">
-            <input type="text" value="{{ photo.title }}" class="span2">
-            <textarea class="span2">{{ photo.description }}</textarea>
-            <label>Location</label>
-            <select name="location" class="span2">
-                {% for location in form_locations %}
-                <option value="{{ location.slug }}">{{ location }}</option>
-                
-                {% endfor %}
-            </select>
-            <a href="#" class="btn btn-danger">Delete <i class="icon-trash icon-white"></i></a>
-            <a href="#" class="btn btn-success">Save</a>
-        </div>
       <h5>{{ photo.title }}</h5>
-      <p>{{ photo.description }}</p>
-      <a href="#">{{ photo.location }}</a>
+      
       
     </div>
     </li>
