--- a/apps/administrator/templates/administrator/base.html
+++ b/apps/administrator/templates/administrator/base.html
@@ -48,6 +48,7 @@
                               {% endfor %}
                               
                               </select>
+                              <input type="hidden" name="user_id" value="{{ request.user.id }}">
                               
                               <label>Location</label>
                               <select name="location">
