--- a/apps/administrator/templates/administrator/add_photos.html
+++ b/apps/administrator/templates/administrator/add_photos.html
@@ -7,8 +7,8 @@
     <script type="text/javascript">
     $(document).ready(function() {
       $('#file_upload').uploadify({
-        'uploader'  : '{{ STATIC_URL }}js/uploadify/uploadify.swf',
-        'script'    : '{% url file_uploader album_slug=album_slug location_slug=location_slug %}',
+        'uploader'  : '{{ domain_static }}js/uploadify/uploadify.swf',
+        'script'    : '{% url file_uploader album_slug=album_slug location_slug=location_slug user_id=request.user.id %}',
         'cancelImg' : '{{ STATIC_URL }}js/uploadify/cancel.png',
         'folder'    : '{{ upload_dir }}',
         'auto'      : true,
