--- a/apps/administrator/templates/administrator/base.html
+++ b/apps/administrator/templates/administrator/base.html
@@ -32,42 +32,79 @@
 
   <body {% block extra_body %}{% endblock extra_body %}>
 <div class="modal hide fade" id="myModal">
-            <div class="modal-header">
-              <a data-dismiss="modal" class="close">×</a>
-              <h3>Add Photos</h3>
-            </div>
-            <div class="modal-body">
-              <h4>Select Album and Location</h4>
-              <p>Select the album and location that you want to associate you uploaded photos with.</p>
-              <form method="GET" action="{% url administrator.views.choose %}">
-              <label>Album Name:</label>
-                              <select name="album">
-                                  {% for album in form_albums %}
-                                  <option value="{{ album.slug }}">{{ album.title }}</option>
-                                  
-                              {% endfor %}
-                              
-                              </select>
-                              <input type="hidden" name="user_id" value="{{ request.user.id }}">
-                              
-                              <label>Location</label>
-                              <select name="location">
-                                  {% for location in form_locations %}
-                                  <option value="{{ location.slug }}">{{ location }}</option>
-                                  
-                              {% endfor %}
-                              
-                              </select>
+    <div class="modal-header">
+      <a data-dismiss="modal" class="close">×</a>
+      <h3>Add Photos</h3>
+    </div>
+    <div class="modal-body">
+      <h4>Select Album and Location</h4>
+      <p>Select the album and location that you want to associate you uploaded photos with.</p>
+      <form method="GET" action="{% url administrator.views.choose %}">
+      <label>Album Name:</label>
+                      <select name="album">
+                          {% for album in form_albums %}
+                          <option value="{{ album.slug }}">{{ album.title }}</option>
+                          
+                      {% endfor %}
+                      
+                      </select>
+                      <input type="hidden" name="user_id" value="{{ request.user.id }}">
+                      
+                      <label>Location</label>
+                      <select name="location">
+                          {% for location in form_locations %}
+                          <option value="{{ location.slug }}">{{ location }}</option>
+                          
+                      {% endfor %}
+                      
+                      </select>
 
-              
-            </div>
-            <div class="modal-footer">
-              <a data-dismiss="modal" class="btn" href="#">Close</a>
-              <input type="submit" value="Proceed to Upload" class="btn btn-primary">
-              
-            </div>
-            </form>
-          </div>
+      
+    </div>
+    <div class="modal-footer">
+      <a data-dismiss="modal" class="btn" href="#">Close</a>
+      <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+      
+    </div>
+    </form>
+  </div>
+  <div class="modal hide fade" id="addAlbum">
+      <div class="modal-header">
+        <a data-dismiss="modal" class="close">×</a>
+        <h3>Add Album</h3>
+      </div>
+      <div class="modal-body">
+        <h4>Select Album and Location</h4>
+        <p>Select the album and location that you want to associate you uploaded photos with.</p>
+        <form method="GET" action="{% url administrator.views.choose %}">
+        <label>Album Name:</label>
+            <select name="album">
+                {% for album in form_albums %}
+                <option value="{{ album.slug }}">{{ album.title }}</option>
+                
+            {% endfor %}
+            
+            </select>
+            <input type="hidden" name="user_id" value="{{ request.user.id }}">
+            
+            <label>Location</label>
+            <select name="location">
+                {% for location in form_locations %}
+                <option value="{{ location.slug }}">{{ location }}</option>
+                
+            {% endfor %}
+            
+            </select>
+  
+        
+      </div>
+      <div class="modal-footer">
+        <a data-dismiss="modal" class="btn" href="#">Close</a>
+        <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+        
+      </div>
+      </form>
+    </div>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -81,10 +118,9 @@
             <ul class="nav">
               <li class="active"><a href="{% url admin_dashboard %}">Dashboard</a></li>
               <li><a href="#myModal" data-toggle="modal">Add Photos</a></li>
+              <li><a href="#addAlbum" data-toggle="modal">Add Album</a></li>
               <li><a target="_blank" href="{% url photo_manager.views.homepage %}">View Site</a></li>
             </ul>
-            
-            
             
             <ul class="nav pull-right">
                 <li class="divider-vertical"></li>
