--- a/apps/administrator/templates/administrator/dashboard.html
+++ b/apps/administrator/templates/administrator/dashboard.html
@@ -1,11 +1,40 @@
 {% extends "administrator/base.html" %}
 
 {% block main_content %}
+
+
 <div class="page-header">
 <h2>Recent Uploads</h2>
 </div>
 <ul class="thumbnails">
 {% for photo in photos %}
+    <div class="modal hide fade" id="deletePhoto_{{ photo.id }}">
+        <div class="modal-header">
+          <a data-dismiss="modal" class="close">×</a>
+          <h3>Delete {{ photo.title }}?</h3>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+          <div class="span3">
+          <h4>Are you sure you want to delete this photo?</h4>
+          </div>
+          <div class="span2">
+              <div class="thumbnail">
+                  {% load thumbnail %}
+                  {% thumbnail photo.image "240x161" crop="center" as im %}
+                  <img src="{{ im.url }}">
+                  {% endthumbnail %}
+              </div>
+          </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <a data-dismiss="modal" class="btn" href="#">Close</a>
+          <a class="btn btn-danger" href="#">Confirm Delete</a>
+        </div>
+        </form>
+      </div>
+
     <li class="span2 thumb">
     <a class="thumbnail" href="#">
     {% load thumbnail %}
@@ -26,12 +55,14 @@
                 
                 {% endfor %}
             </select>
-            <a href="#" class="btn btn-danger">Delete <i class="icon-trash icon-white"></i></a>
+            <a href="#deletePhoto_{{ photo.id }}" data-toggle="modal" class="btn btn-danger">Delete <i class="icon-trash icon-white"></i></a>
             <a href="#" class="btn btn-success">Save</a>
         </div>
       <h5>{{ photo.title }}</h5>
+      {% if photo.description %}
       <p>{{ photo.description }}</p>
-      <a href="#">{{ photo.location }}</a>
+      {% endif %}
+      <a href="#"><i class="icon-map-marker"></i>  {{ photo.location }}</a>
       
     </div>
     </li>
