--- a/apps/administrator/templates/administrator/dashboard.html
+++ b/apps/administrator/templates/administrator/dashboard.html
@@ -7,7 +7,7 @@
 <h2>Recent Uploads</h2>
 </div>
 <ul class="thumbnails">
-{% for photo in photos %}
+{% for photo in photos.object_list %}
     <div class="modal hide fade" id="deletePhoto_{{ photo.id }}">
         <div class="modal-header">
           <a data-dismiss="modal" class="close">×</a>
@@ -70,6 +70,26 @@
     
     
 </ul>
+<div class="pagination">
+    <ul>
+        {% if photos.has_previous %}
+        <li><a href="?page={{ photos.previous_page_number }}">Prev</a></li>
+        {% endif %}
+        {% if photos.previous_page_number %}
+        <li><a href="?page={{ photos.previous_page_number }}">{{ photos.previous_page_number }}</a></li>
+        {% endif %}
+        <li class="active">
+            <a href="#">{{ photos.number }}</a>
+        </li>
+        {% if photos.next_page_number %}
+        <li><a href="?page={{ photos.next_page_number }}">{{ photos.next_page_number }}</a></li>
+        {% endif %}
+        {% if photos.has_next %}
+        <li><a href="?page={{ photos.next_page_number }}">Next</a></li>
+        {% endif %}
+    </ul>
+</div>
+
 
 {% endblock main_content %}
 
