--- a/apps/administrator/templates/administrator/albums.html
+++ b/apps/administrator/templates/administrator/albums.html
@@ -7,6 +7,30 @@
 {% endblock sidebar %}
 
 {% block main_content %}
+<div class="modal hide fade" id="addAlbum">
+    <div class="modal-header">
+      <a data-dismiss="modal" class="close">×</a>
+      <h3>Add Album</h3>
+    </div>
+    <div class="modal-body">
+      <h4>Add a New Photo Album</h4>
+      <form method="POST" action=".">
+      {% csrf_token %}
+      <label>Title</label>
+      <input type="text" name="title" class="span5">
+      <label>Description</label>
+      <textarea class="span5" name="description"></textarea>
+      <label>Parent Album</label>
+      {{ album_form.parent_album }}
+    </div>
+    <div class="modal-footer">
+      <a data-dismiss="modal" class="btn" href="#">Close</a>
+      <input type="submit" value="Add Album" class="btn btn-primary">
+      
+    </div>
+    </form>
+  </div>
+  
 <div class="modal hide fade" id="chooseLocation">
     <div class="modal-header">
       <a data-dismiss="modal" class="close">×</a>
@@ -55,18 +79,25 @@
           <a data-dismiss="modal" class="close">×</a>
           <h3>Add Child Album</h3>
         </div>
+         <form method="POST" action=".">{% csrf_token %}
         <div class="modal-body">
-          <h4>Select Album and Location</h4>
+          <h4>Add a Child Album for {{ album }}</h4>
+         
+          <label>Title</label>
+          <input type="text" name="title" class="span5">
+          <label>Description</label>
+          <textarea name="description" class="span5"></textarea>
+          <input type="hidden" value="{{ album.id }}" name="parent_album">
           
     
           
         </div>
         <div class="modal-footer">
           <a data-dismiss="modal" class="btn" href="#">Close</a>
-          <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+          <input type="submit" value="Add Album" class="btn btn-primary">
           
         </div>
-        
+        </form>
       </div>
 
 
@@ -93,6 +124,9 @@
           <h5>{{ album.title }}</h5>
           {% if album.description %}
           <p>{{ album.description }}</p>
+          {% if album.parent_album %}
+          <p><span class="label label-info">Child Album - {{ album.parent_album }}</span></p>
+          {% endif %}
           {% endif %}
           <div class="btn-group">
               <button class="btn">Album Actions</button>
