--- a/apps/administrator/templates/administrator/locations.html
+++ b/apps/administrator/templates/administrator/locations.html
@@ -87,33 +87,14 @@ rules: [
       <h3>Add Location</h3>
     </div>
     <div class="modal-body">
-      <h4>Select Album and Location</h4>
-      <p>Select the album and location that you want to associate you uploaded photos with.</p>
-      <form method="GET" action="{% url administrator.views.choose %}">
-      <label>Album Name:</label>
-          <select name="album">
-              {% for album in form_albums %}
-              <option value="{{ album.slug }}">{{ album.title }}</option>
-              
-          {% endfor %}
-          
-          </select>
-          <input type="hidden" name="user_id" value="{{ request.user.id }}">
-          
-          <label>Location</label>
-          <select name="location">
-              {% for location in form_locations %}
-              <option value="{{ location.slug }}">{{ location }}</option>
-              
-          {% endfor %}
-          
-          </select>
-
+      <h4>Add New Location</h4>
+      <form method="POST" action=".">{% csrf_token %}
+      {{ form }}
       
     </div>
     <div class="modal-footer">
       <a data-dismiss="modal" class="btn" href="#">Close</a>
-      <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+      <input type="submit" value="Add Location" class="btn btn-primary">
       
     </div>
     </form>
@@ -128,8 +109,8 @@ rules: [
 {% endblock %}
 
 {% block sidebar %}
-<a href="{% url administrator.views.add_location %}" class="btn btn-primary full">Add Location</a>
-<a href="#addLocation" data-toggle="modal" class="btn btn-success full">Add Location Modal</a>
+
+<a href="#addLocation" data-toggle="modal" class="btn btn-success full">Add Location</a>
 <div class="well">
     <h4>Locations</h4>
     <ul class="unstyled">
