--- a/themes/twitter/templates/twitter/index.html
+++ b/themes/twitter/templates/twitter/index.html
@@ -5,6 +5,61 @@
 {% block main_content %}
 
 <div class="span12">
+{% if album_view %}
+<ul class="breadcrumb">
+  <li>
+    <a href="{% url homepage %}">Home</a> <span class="divider">/</span>
+  </li>
+  {% if album.parent_album %}
+  <li>
+    <a href="{{ album.parent_album.get_absolute_url }}">{{ album.parent_album }}</a> <span class="divider">/</span>
+  </li>
+  {% endif %}
+  <li class="active">{{ album }}</li>
+</ul>
+
+{% else %}
+<ul class="breadcrumb">
+  <li class="active">
+    <a href="{% url homepage %}">Home</a>
+  </li>
+  
+</ul>
+{% endif %}
+
+{% if album_view %}
+	{% if album.has_child_albums %}
+		<h2>Sub Albums of {{ album.title }}</h2>
+	{% endif %}
+	<ul class="thumbnails">
+	{% for album in child_albums.object_list %}
+		<li class="span3">
+		    <a href="{{ album.get_absolute_url }}" class="thumbnail">
+		        {% if album.album_cover %}
+		                {% load thumbnail %}
+		                {% thumbnail album.album_cover "300x220" as im %}
+		                <img src="{{ im.url }}">
+		                {% endthumbnail %}
+		                
+		            {% else %}
+		                {% if album.get_album_cover %}
+		                    {% load thumbnail %}
+		            {% thumbnail album.get_album_cover.image "300x220" as im %}
+		        <img src="{{ im.url }}">
+		            {% endthumbnail %}
+		                {% else %}
+		                <img src="http://dummyimage.com/260x180">
+		                {% endif %}
+		        {% endif %}
+		    </a>
+		    <h4>{{ album.title }}</h4>
+		</li>
+	{% endfor %}
+	</ul>
+{% endif %}
+
+
+
 <ul class="thumbnails">
 {% for photo in photos.object_list %}
     
