--- a/themes/twitter/templates/twitter/albums.html
+++ b/themes/twitter/templates/twitter/albums.html
@@ -25,10 +25,17 @@
 </ul>
 
 <div class="page-header">
-    <h2>{{ album }}</h2>
+    <h2>{{ album.title }} <button id="start-slideshow" class="btn btn-large btn-success" data-slideshow="5000" data-target="#modal-gallery" data-selector="#gallery a[rel=gallery]">Start Slideshow</button></h2>
+</div>
+<div data-toggle="modal-gallery" data-target="#modal-gallery">
+{% for photo in photos.object_list %}
+    {% include "twitter/snippets/slideshow_list.html" %}
+{% endfor %}
 </div>
 <ul class="thumbnails">
+
 {% for photo in photos.object_list %}
+    
     {% if album.has_child_albums %}
     {% include "twitter/snippets/smaller_item.html" %}
     {% else %}
@@ -123,3 +130,51 @@
 
 
 {% endblock %}
+{% block extra_foot %}
+<script>
+/*jslint unparam: true */
+/*global window, document, $ */
+$(function () {
+    'use strict';
+
+    // Start slideshow button:
+    $('#start-slideshow').button().click(function () {
+        var options = $(this).data(),
+            modal = $(options.target),
+            data = modal.data('modal');
+        if (data) {
+            $.extend(data.options, options);
+        } else {
+            options = $.extend(modal.data(), options);
+        }
+        modal.find('.modal-slideshow').find('i')
+            .removeClass('icon-play')
+            .addClass('icon-pause');
+        modal.modal(options);
+    });
+
+    // Toggle fullscreen button:
+    $('#toggle-fullscreen').button().click(function () {
+        var button = $(this),
+            root = document.documentElement;
+        if (!button.hasClass('active')) {
+            $('#modal-gallery').addClass('modal-fullscreen');
+            if (root.webkitRequestFullScreen) {
+                root.webkitRequestFullScreen(
+                    window.Element.ALLOW_KEYBOARD_INPUT
+                );
+            } else if (root.mozRequestFullScreen) {
+                root.mozRequestFullScreen();
+            }
+        } else {
+            $('#modal-gallery').removeClass('modal-fullscreen');
+            (document.webkitCancelFullScreen ||
+                document.mozCancelFullScreen ||
+                $.noop).apply(document);
+        }
+    });
+
+    
+});
+</script>
+{% endblock extra_foot %}
