--- a/themes/twitter/templates/twitter/snippets/item.html
+++ b/themes/twitter/templates/twitter/snippets/item.html
@@ -1,10 +1,10 @@
 <li class="span3 {% if forloop.counter == 5 or forloop.counter == 9 or forloop.counter == 13 %}clear-photo{% endif %}">
-<a href="{{ photo.get_absolute_url }}" class="thumbnail">
+<a href="{{ photo.get_absolute_url }}" class="thumbnail polaroid">
 {% load thumbnail %}
 {% thumbnail photo.image "300x220" as im %}
-	<img src="{{ im.url }}" alt="{{ photo.title }}">
+	<img src="{{ im.url }}" alt="{{ photo.title }}" rel="gallery">
 {% endthumbnail %}
+<span>{{ photo.title }}</span>
 </a>
-<h4>{{ photo.title }}</h4>
 </li>
 
